[package]
name = "fractran"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lalrpop-util = "0.19.6"
regex = "1"
structopt = "0.3.22"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.19.6"
